Bug 273585 - Doesn't compile due to KIMAGECACHE/doesn't fall back to KPIXMAPCACHE
Summary: Doesn't compile due to KIMAGECACHE/doesn't fall back to KPIXMAPCACHE
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4-GIT
Platform: Debian unstable Linux
: HI major
Target Milestone: 2.4.2
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-18 22:19 UTC by Thierry Göckel
Modified: 2011-05-25 08:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thierry Göckel 2011-05-18 22:19:01 UTC
Version:           2.4-GIT (using KDE 4.4.5) 
OS:                Linux

d4aa91efcbb9568ddf5fcc338c22c8337147b5aa commit says cmake would detect whether kimagecache is available or not and then fall back to kpixmapcache for older kde versions.
Debian still has kde 4.4.5 and thus compilation fails.

Reproducible: Always

Steps to Reproduce:
clean src and build dirs, cmake && make -j3

Actual Results:  
fails "kde/src/amarok/src/ImageCache.h:93:49: error: void value not ignored as it ought to be"

Expected Results:  
compile
Comment 1 Alex Merry 2011-05-23 02:31:18 UTC
Git commit 93e5d09a1360f3850957ca1aa35a54ccedbe31c9 by Alex Merry.
Committed on 23/05/2011 at 02:11.
Pushed by alexmerry into branch 'master'.

Fix compile with kdelibs 4.4

KPixmapCache::insert returns void, not bool, so always return true when
using KPixmapCache.

Also, use #ifdef HAVE_KIMAGECACHE, not #if HAVE_KIMAGECACHE, to avoid
"undefined macro" warnings.

BUG: 273585

M  +12   -11   src/ImageCache.h     

http://commits.kde.org/amarok/93e5d09a1360f3850957ca1aa35a54ccedbe31c9