Fix compile with kdelibs 4.4

KPixmapCache::insert returns void, not bool, so always return true when
using KPixmapCache.

Also, use #ifdef HAVE_KIMAGECACHE, not #if HAVE_KIMAGECACHE, to avoid
"undefined macro" warnings.

BUG: 273585